:lipstick: Fix alignment in achievements dialog

--- a/src/settings-renderer/components/dialogs/AchievementsDialog.module.scss
+++ b/src/settings-renderer/components/dialogs/AchievementsDialog.module.scss
@@ -115,6 +115,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 8px;
   }
 
   .achievementName {
